# vppuzakov.github.io

./: 404.html  CNAME  LICENSE  README.md  _config.yml  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml
2020/12/20/cv/: index.html
2020/12/20/hello-world/: index.html
2022/02/02/cv/: index.html
archives/: index.html
archives/2020/: index.html
archives/2020/12/: index.html
archives/2022/: index.html
archives/2022/02/: index.html
css/: main.css  style.css
cv/: index.html
docs/: index.md
fancybox/: jquery.fancybox.css
search/: search_index.json
source/_posts/: cv.md
tech-radar/: index.html
themes/jelly/: _config.yml
themes/jelly/layout/: layout.ejs
themes/jelly/layout/_partial/: left-col.ejs  mobile-nav.ejs
themes/jelly/source/css/: style.styl
themes/jelly/source/css/_partial/: article.styl  highlight.styl  main.styl
