[tool.poetry]
name = "vppuzakov.github.io"
version = "0.1.0"
description = ""
authors = ["Vladimir Puzakov <vppuzakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
markdown-include = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
